--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -35,6 +35,7 @@ FetchContent_Declare(
 FetchContent_GetProperties(glog)
 if (NOT glog_POPULATED)
     FetchContent_Populate(glog)
+    set(WITH_GFLAGS OFF CACHE BOOL "" FORCE)
     add_subdirectory(${glog_SOURCE_DIR} ${glog_BINARY_DIR})
     target_link_libraries(3rdparty_stub INTERFACE glog::glog)
 endif ()
