--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 file(GLOB_RECURSE SOURCE_LIST *.h *.cpp)
 add_executable(rt_test ${SOURCE_LIST})
-target_link_libraries(rt_test rt)
+target_link_libraries(rt_test rt gtest_main)
